# PI-1

./: .gitignore
Versuch03/: CMakeLists.txt
Versuch03/doc/: Versuch-03
Versuch03/doc/html/: config_8h.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  globals_vars.html  index.html  navtreedata.js  navtreeindex0.js  reversi_k_i_8cpp.html  reversi_k_i_8h.html  reversi_k_i_8h_source.html  test_8cpp.html  test_8h.html  test_8h_source.html
Versuch03/include/: config.h  reversiKI.h  test.h
Versuch03/src/: reversi.cpp  reversiKI.cpp  test.cpp
Versuch07/: CMakeLists.txt  studenten.txt
Versuch07/doc/: Versuch-07
Versuch07/doc/html/: _student_8cpp.html  _student_8h.html  _student_8h_source.html  annotated.html  class_student.html  class_student.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js
Versuch07/include/: Student.h
Versuch07/src/: Student.cpp  main.cpp
Versuch08/: CMakeLists.txt
Versuch08/doc/: Versuch-08
Versuch08/doc/html/: _datum_8cpp.html  _datum_8h.html  _datum_8h_source.html  classes.html  (+24 more)
Versuch08/include/: Buch.h  DVD.h  Datum.h  Magazin.h  Medium.h  Person.h
Versuch08/src/: Buch.cpp  Buecherei.cpp  DVD.cpp  Datum.cpp  Magazin.cpp  Medium.cpp
(+82 files in other folders)
